# semantAH

./: .ai-context.yml  .gitignore  .hauski-reports  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Justfile  Makefile  README.md  codecov.yml  integrity_event_payload.json  patch.diff  push.err  pyproject.toml  pytest.ini  semantah.yml  sichter-reports
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ai-context-guard.yml  ci-tools.yml  ci.yml  contracts-sync-guard.yml  contracts-validate.yml  contracts.yml  guard_structure.yml  heimgewebe-command-dispatch.yml  insights-daily-drift.yml  integrity.yml  knowledge-extract-and-ingest.yml  knowledge-extract-ingest.yml  knowledge-observatory-drift.yml  observatory-drift.yml  publish-insights-daily.yml  publish-knowledge-observatory.yml  secret-scan-gitleaks.yml  validate-intent-fixtures.yml  validate-knowledge-graph.yml  wgx-guard.yml  wgx-reusable.yml
.hypothesis/constants/: 7262f7aa160e86bf  a8cef397c0bd3e0d  ac9ff03930049d8c  dadd8837b8b1e623
.test-indexd-state/: store.jsonl
.wgx/: flows.json  profile.yml
artifacts/: insights.daily.json  observatory.diff.json  observatory.prev.json
cli/: ingest_chronik.py  ingest_intents.py  ingest_leitstand.py
codex/: CONTRIBUTING.md
contracts/: decision.preimage.schema.json  insights.daily.schema.json  insights.schema.json  integrity.summary.schema.json  knowledge.observatory.schema.json  os.context.text.embed.schema.json
contracts/examples/: insights.example.json  knowledge.observatory.example.json  os.context.text.embed.example.json
contracts/semantics/: README.md  edge.schema.json  node.schema.json  report.schema.json
crates/embeddings/: Cargo.toml  README.md
crates/embeddings/src/: lib.rs
crates/embeddings/tests/: ollama_error.rs  ollama_mock.rs  version.rs
crates/indexd/: Cargo.toml  README.md
crates/indexd/benches/: indexd_real_workload.rs
crates/indexd/src/: api.rs  api.rs_patch.rs  key.rs  lib.rs  main.rs  persist.rs  store.rs
crates/indexd/tests/: e2e_http.rs  embed_text.rs  healthz.rs  migration.rs  persist_e2e.rs  regression_prefix_sort.rs  search.rs  upsert.rs
docs/: README.md  blueprint.md  config-reference.md  embeddings.md  hauski.md  indexd-api.md  indexd-architecture.md  indexd-performance.md  integrity-contract.md  mitschreiber-index.md  namespaces.md  quickstart.md  repobrief-chunk-embedding-bridge.md  roadmap.md  runbook.observability.md  semantAH brainstorm.md  semantAH-feedback-loop.md  semantAH.md  wgx-konzept.md  wgx.md
docs/adr/: 0001-semantics-contract.md  00xx-rename-leitstand-chronik.md
docs/contracts/: artifact-names.md  output.md
docs/examples/: integrity.summary.example.json
docs/proofs/: rpu-v1-t013-repobrief-chunk-bridge-proof.md  semantah-security-hygiene-v1-t001.md
docs/runbooks/: semantics-intake.md
docs/semantAH/: observatory.md  (+2 more)
examples/: semantah.example.yml
heimgewebe-.ai-context.yml-sammlung/: chronik.ai-context.yml  hauski.ai-context.yml  leitstand.ai-context.yml  sichter.ai-context.yml  wgx.ai-context.yml
merges/: semantAH_merge_2510262237__.github_workflows.md  semantAH_merge_2510262237__codex.md  semantAH_merge_2510262237__contracts.md  semantAH_merge_2510262237__crates_embeddings.md  semantAH_merge_2510262237__crates_indexd_src.md  semantAH_merge_2510262237__crates_indexd_tests.md  semantAH_merge_2510262237__index.md  semantAH_merge_2510262237__scripts.md  semantAH_merge_2510262237__semantAH_.gewebe_out.md  semantAH_merge_2510262237__semantAH_.github_ISSUE_TEMPLATE.md  semantAH_merge_2510262237__semantAH_.github_workflows.md  semantAH_merge_2510262237__semantAH_.wgx.md  semantAH_merge_2510262237__semantAH_codex.md  semantAH_merge_2510262237__semantAH_crates_embeddings.md  semantAH_merge_2510262237__semantAH_crates_indexd.md  semantAH_merge_2510262237__semantAH_crates_indexd_tests.md  semantAH_merge_2510262237__semantAH_docs_adr.md  semantAH_merge_2510262237__semantAH_examples.md  semantAH_merge_2510262237__semantAH_scripts.md  semantAH_merge_2510262237__semantAH_systemd.md  semantAH_merge_2510262237__systemd.md  semantAH_merge_2510262237__tests.md  semantAH_merge_2510262238__.github_ISSUE_TEMPLATE.md  semantAH_merge_2510262238__.wgx.md  semantAH_merge_2510262238__cli.md  semantAH_merge_2510262238__contracts_semantics.md  semantAH_merge_2510262238__contracts_semantics_examples.md  semantAH_merge_2510262238__crates_embeddings_src.md  semantAH_merge_2510262238__crates_indexd.md  semantAH_merge_2510262238__docs.md  semantAH_merge_2510262238__docs_adr.md  semantAH_merge_2510262238__docs_runbooks.md  semantAH_merge_2510262238__docs_x-repo.md  semantAH_merge_2510262238__examples.md  semantAH_merge_2510262238__index.md  semantAH_merge_2510262238__leitstand_data.md  semantAH_merge_2510262238__merges.md  semantAH_merge_2510262238__root.md  semantAH_merge_2510262238__semantAH.md  semantAH_merge_2510262238__semantAH_contracts_semantics.md  (+6 more)
notes/: note1.md  note2.md
policy/: feedback-loop.v1.yml
scripts/: README.md  benchmark_push_index.py  build_graph.py  build_index.py  chronik_tail_reader.py  diff_daily_insights.py  emit_negations.py  export_daily_insights.py  export_insights.py  generate_integrity_summary.py  ingest_leitstand.py  observatory-mvp  observatory_diff.py  observatory_lib.py  observatory_mvp.py  pandas_stub.py  push_index.py  repobrief_chunk_bridge.py  sync_contracts_from_metarepo.sh  test_integrity.py  update_related.py  wgx-metrics-snapshot.sh
systemd/: vault-gewebe.service  vault-gewebe.timer
tests/: conftest.py  test_chronik_tail_reader.py  test_export_daily_insights.py  test_export_insights.py  test_generate_integrity_summary.py  test_indexd_documentation_truth.py  test_ingest_chronik.py  test_ingest_intents.py  test_negation_emitter.py  test_observatory_diff.py  test_observatory_lib.py  test_observatory_lib_caching.py  test_push_index.py  test_push_index_e2e.py  test_push_index_property.py  test_repobrief_chunk_bridge.py  test_validate_ai_context.py
tools/: build_graph.py  update_related.py
wgx/: wgx
wgx/cmd/: guard  (+5 more)
(+15 files in other folders)
