[workspace]
members = [
    "crates/embeddings",
    "crates/indexd"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
config = "0.14"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

