[project]
name = "semantah"
version = "0.1.0"
description = "Vault-Gewebe Toolkit (Indexing, Graph, Related)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.1",
    "coverage>=7.5",
    "hypothesis>=6.100",
]

[tool.pytest.ini_options]
addopts = "-q"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
branch = true
