[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantah"
version = "0.1.0"
description = "Vault-Gewebe Toolkit (Indexing, Graph, Related)"
requires-python = ">=3.10"
dependencies = [
    "jsonschema",
    "numpy",
    "pandas",
    "pyarrow",
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.1",
    "coverage>=7.5",
    "hypothesis>=6.100",
]
dev = [
    "ruff>=0.4.0",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "cli*", "tools*"]

[tool.pytest.ini_options]
addopts = "-ra"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
