[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Abstractions and clients for semantic embedding providers"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
axum = { version = "0.7", default-features = false, features = ["macros", "json", "tokio", "http1"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
