[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Abstractions and clients for semantic embedding providers"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
axum = "0.7"
anyhow = "1"
hyper = { version = "1", features = ["server"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
