[package]
name = "indexd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "HTTP service for indexing and semantic search"

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
thiserror.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true

[dependencies.embeddings]
path = "../embeddings"

[dev-dependencies]
tower = "0.5"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"

[[test]]
name = "healthz"
path = "tests/healthz.rs"

[[test]]
name = "search"
path = "tests/search.rs"

[[test]]
name = "e2e_http"
path = "tests/e2e_http.rs"

[[test]]
name = "upsert"
path = "tests/upsert.rs"

[[test]]
name = "embed_text"
path = "tests/embed_text.rs"

[[test]]
name = "migration"
path = "tests/migration.rs"
